# grdn.day

./: README.md  keypair-gen.py
app/: .gitignore  .prettierrc.toml  README.md  config-overrides.js  package.json  tsconfig.json
app/public/: index.html  manifest.json
app/src/: App.jsx  index.js
app/src/assets/styles/: App.css
app/src/components/: GamePlayMapDrawing.jsx  Home.tsx  NurseryModal.jsx  SeedBag.jsx  SideMenu.jsx  UserInfo.jsx  Wallet.js
app/src/hooks/: useGarden.ts  useKeyPress.ts  useMetaplex.ts  useToggle.ts  useTransactionHistory.ts
app/src/logic/: GameMap.js
app/src/logic/candy/: candy-machine.ts  connection.ts  utils.ts
app/src/shared/: utils.ts
garden/: Anchor.toml  README.md
garden/programs/garden/: Cargo.toml
garden/programs/garden/src/: lib.rs
garden/tests/: garden.ts
