[package]
name = "garden"
version = "0.1.0"
description = "Simple program that allows users to store NFTs in specify positions in a Garden"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "garden"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
